--- a/Engine/ColorVision.Engine/Templates/Flow/DisplayFlow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/DisplayFlow.xaml
@@ -92,8 +92,8 @@
                         <TextBlock Text="Ready" Visibility="{Binding Config.IsReady,Converter={StaticResource bool2VisibilityConverter}}"/>
                     </StackPanel>
                     <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Height="35">
-                        <Button Content="{x:Static properties:Resources.ExecutionProcess}"  x:Name="ButtonRun" FontWeight="Bold" FontSize="16" Click="Button_FlowRun_Click" />
-                        <Button Content="{x:Static properties:Resources.StopProcess}"  x:Name="ButtonStop"  FontWeight="Bold" Visibility="Collapsed" FontSize="16" Click="Button_FlowStop_Click" />
+                        <Button Content="{x:Static properties:Resources.ExecutionProcess}"   Visibility="{Binding FlowControl.IsFlowRun,Converter={StaticResource bool2VisibilityConverter1}}" FontWeight="Bold" FontSize="16" Click="Button_FlowRun_Click" />
+                        <Button Content="{x:Static properties:Resources.StopProcess}"  Visibility="{Binding FlowControl.IsFlowRun,Converter={StaticResource bool2VisibilityConverter}}"  FontWeight="Bold" FontSize="16" Click="Button_FlowStop_Click" />
                     </StackPanel>
                 </Grid>
 
