--- a/Engine/ColorVision.Engine/Templates/LEDStripDetection/EditLEDStripDetection.xaml
+++ b/Engine/ColorVision.Engine/Templates/LEDStripDetection/EditLEDStripDetection.xaml
@@ -23,7 +23,7 @@
                 <Border Grid.Row="1"  Style="{StaticResource BorderModuleArea}"  CornerRadius="5" Margin="0,0,0,5">
                     <StackPanel Margin="5">
                         <DockPanel Margin="0,0,0,5">
-                            <TextBlock Text="开启debug"  MinWidth="110"  />
+                            <TextBlock Text="Debug"  MinWidth="110"  />
                             <ui:ToggleSwitch IsChecked="{Binding IsDebug}"/>
                         </DockPanel>
                         <DockPanel Margin="0,0,0,5">
