--- a/Engine/ColorVision.Engine/Services/WindowService.xaml
+++ b/Engine/ColorVision.Engine/Services/WindowService.xaml
@@ -29,10 +29,25 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <StackPanel Orientation="Horizontal">
+                <DockPanel>
+                    <Button Grid.Column="0" Command="{Binding WindowServiceConfig.EditCommand}" Padding="2" Height="25" Width="25"  Margin="5,0,5,0" DockPanel.Dock="Right">
+                        <Button.Triggers>
+                            <EventTrigger RoutedEvent="Button.Click">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation Storyboard.TargetName="rotateTransform2" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:0.5" FillBehavior="Stop"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                        </Button.Triggers>
+                        <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="16" Foreground="{DynamicResource GlobalTextBrush}">
+                            <TextBlock.RenderTransform>
+                                <RotateTransform x:Name="rotateTransform2" CenterX="8" CenterY="8"/>
+                            </TextBlock.RenderTransform>
+                        </TextBlock>
+                    </Button>
                     <Button Content="{x:Static properties:Resources.ToggleList}" Margin="5,0,5,0" Click="Button_Click_2" />
-                    <Button Content="{x:Static properties:Resources.RestartWindowsService}" Click="Button_Click_1" />
-                </StackPanel>
+                </DockPanel>
 
                 <TreeView x:Name="TreeView1" Grid.Row="1" Style="{StaticResource TreeView.Small}" Loaded="TreeView1_Loaded"  ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectedItemChanged="TreeView1_SelectedItemChanged " Margin="5">
                     <TreeView.Resources>
