--- a/Engine/ColorVision.Engine/Messages/MessagesListWindow.xaml
+++ b/Engine/ColorVision.Engine/Messages/MessagesListWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:MsgRecordManager}"
-        Title="{x:Static properties:Resources.MsgLogWindow}" Height="600" Background="{StaticResource GlobalBackground}" Width="1200" Initialized="Window_Initialized">
+        Title="{x:Static properties:Resources.MsgLogWindow}" Height="720" Background="{StaticResource GlobalBackground}" Width="1280" Initialized="Window_Initialized">
     <Window.Resources>
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}"/>
@@ -134,6 +134,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0"  Margin="0,0,0,5">
                     <TextBox Text="{Binding MsgSend,Mode=OneWay}"  IsReadOnly="True" BorderThickness="1"  ScrollViewer.VerticalScrollBarVisibility="Auto"/>
@@ -149,8 +150,15 @@
                         <Button Content="{x:Static properties:Resources.Compress}"  Click="Button_Click_4"/>
                     </StackPanel>
                 </Grid>
-               
-                
+                <Grid Grid.Row="2">
+                    <TextBox Text="{Binding ErrorMsg,Mode=OneWay}" IsReadOnly="True" BorderThickness="1" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
+                    <StackPanel HorizontalAlignment="Right" Margin="5">
+                        <Button Content="{x:Static properties:Resources.Copy}" Click="Button_Click_3" Margin="0,0,0,5"/>
+                        <Button Content="{x:Static properties:Resources.Compress}"  Click="Button_Click_4"/>
+                    </StackPanel>
+                </Grid>
+
+
             </Grid>
         </Grid>
 
