--- a/Engine/ColorVision.Engine/Services/Devices/CfwPort/DisplayCfwPort.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/CfwPort/DisplayCfwPort.xaml
@@ -42,7 +42,7 @@
                 </TextBlock>
             </Button>
 
-            <Grid>
+            <Grid ToolTip="{Binding DService.DeviceStatus}">
                 <ToggleButton  x:Name="ToggleButton0"  Style="{StaticResource ButtonPageControl1}" Content="{Binding Config.Name}"  FontSize="15"  IsChecked="{Binding DisplayConfig.IsDisplayOpen}" />
                 <Grid  Height="18"   HorizontalAlignment="Left" MouseLeftButtonDown="Grid_MouseLeftButtonDown" Visibility="{Binding DisplayConfig.IsDisplayOpen,Converter={StaticResource bool2VisibilityConverter}}" Background="{DynamicResource GlobalBackground}" Margin="4,0,0,0"/>
             </Grid>     
