--- a/Engine/ColorVision.Engine/Services/Devices/SMU/DisplaySMU.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/SMU/DisplaySMU.xaml
@@ -41,7 +41,7 @@
                 </TextBlock>
             </Button>
 
-            <Grid>
+            <Grid ToolTip="{Binding DService.DeviceStatus}">
                 <ToggleButton  x:Name="ToggleButton0"  Style="{StaticResource ButtonPageControl1}"  Content="{Binding Config.Name}"  FontSize="15"  IsChecked="{Binding DisplayConfig.IsDisplayOpen}" />
                 <Grid  Height="18"   HorizontalAlignment="Left" MouseLeftButtonDown="Grid_MouseLeftButtonDown" Visibility="{Binding ElementName=ToggleButton0,Path=IsChecked,Converter={StaticResource bool2VisibilityConverter}}" Background="{DynamicResource GlobalBackground}" Margin="4,0,0,0"/>
             </Grid>
@@ -146,7 +146,7 @@
 
 
                 <DockPanel Margin="0,5,0,0">
-                    <TextBlock Text="{x:Static properties:Resources.OutputView}" VerticalAlignment="Center" MinWidth="40" Margin="0,0,20,0" />
+                    <TextBlock Text="{x:Static properties:Resources.OutputView}" VerticalAlignment="Center" MinWidth="40" Margin="0,0,20,0"  ToolTip="{Binding DService.DeviceStatus}"/>
                     <ComboBox x:Name="ComboxView"  Style="{StaticResource ComboBox.Small}"  SelectedValuePath="Value" DisplayMemberPath="Key"   />
                 </DockPanel>
             </StackPanel>
