--- a/Engine/ColorVision.Engine/Services/Devices/SMU/DisplaySMU.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/SMU/DisplaySMU.xaml
@@ -7,7 +7,7 @@
              xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance local:DeviceSMU}"
-             d:DesignHeight="450" d:DesignWidth="300" Width="300" Initialized="UserControl_Initialized">
+             d:DesignHeight="450" d:DesignWidth="300" Width="300"  ContextMenu="{Binding ContextMenu}"  Initialized="UserControl_Initialized">
     <UserControl.Resources>
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}"/>
