--- a/Engine/ColorVision.Engine/Services/Devices/PG/DisplayPG.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/PG/DisplayPG.xaml
@@ -9,7 +9,7 @@
              xmlns:properties ="clr-namespace:ColorVision.Engine.Properties"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance local:DevicePG}"
-             d:DesignHeight="400" d:DesignWidth="300" Initialized="UserControl_Initialized">
+             d:DesignHeight="400" d:DesignWidth="300"  ContextMenu="{Binding ContextMenu}"  Initialized="UserControl_Initialized">
     <UserControl.Resources>
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}"/>
