--- a/Engine/ColorVision.Engine/CalFile/CVFileImportWindow.xaml
+++ b/Engine/ColorVision.Engine/CalFile/CVFileImportWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ColorVision.Engine.CVFileImportWindow"
+﻿<Window x:Class="ColorVision.Engine.CalFile.CVFileImportWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.Engine"
+        xmlns:local="clr-namespace:ColorVision.Engine.CalFile"
         mc:Ignorable="d"
         Title="相机配置导入预览" Height="500" Width="600" WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
@@ -25,8 +25,8 @@
                   HeadersVisibility="Column" GridLinesVisibility="Horizontal"
                   Background="White" BorderBrush="#DDD" BorderThickness="1">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="属性 (Property)" Binding="{Binding Key}" Width="200" FontWeight="SemiBold"/>
-                <DataGridTextColumn Header="值 (Value)" Binding="{Binding Value}" Width="*"/>
+                <DataGridTextColumn Header="属性" Binding="{Binding PropertyName}"/>
+                <DataGridTextColumn Header="值" Binding="{Binding Value}"/>
             </DataGrid.Columns>
         </DataGrid>
 
