--- a/Engine/ColorVision.Engine/Services/Devices/SMU/DisplaySMU.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/SMU/DisplaySMU.xaml
@@ -52,33 +52,30 @@
                 <Button x:Name="ButtonUnauthorized" Margin="0,0,0,3" Content="{x:Static properties:Resources.UnauthorizedOrLicenseExpired}" Command="{Binding EditCommand}"/>
                 <TextBlock x:Name="TextBlockOffLine" Text="{x:Static properties:Resources.offline}"  HorizontalAlignment="Center"/>
                 <DockPanel x:Name="StackPanelContent" Margin="0,0,0,3" >
-                    <TextBlock  DockPanel.Dock="Right"  Text="{Binding DService.DeviceStatus}" />
-                    <Button x:Name="ButtonSourceMeter1" Content="{x:Static properties:Resources.Open}"  Padding="20,0" Margin="0,0,5,0" Click="ButtonSourceMeter1_Click"/>
+                    <Button x:Name="ButtonSourceMeter1" Content="{x:Static properties:Resources.Open}"  Click="ButtonSourceMeter1_Click"/>
                 </DockPanel>
                 <StackPanel  x:Name="StackPanelOpen" >
 
                     <DockPanel Margin="0,0,0,3" >
 
-                        <TextBlock Text="Channel" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                        <TextBlock Text="Channel" VerticalAlignment="Center" Margin="0,0,3,0"/>
                         <ComboBox Name="CbChannel" Style="{StaticResource ComboBox.Small}"  SelectedValue="{Binding DisplayConfig.Channel}"   Width="50" />
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                            <RadioButton Content="{x:Static properties:Resources.V}" IsChecked="{Binding DisplayConfig.IsSourceV}"  Margin="0,0,5,0"  />
-                            <RadioButton Content="{x:Static properties:Resources.I}" IsChecked="{Binding DisplayConfig.IsSourceV,Converter={StaticResource inverseBooleanConverter}}" Margin="0,0,5,0"/>
+                            <RadioButton Content="{x:Static properties:Resources.V}" IsChecked="{Binding DisplayConfig.IsSourceV}"  Margin="0,0,3,0"  />
+                            <RadioButton Content="{x:Static properties:Resources.I}" IsChecked="{Binding DisplayConfig.IsSourceV,Converter={StaticResource inverseBooleanConverter}}" />
                         </StackPanel>
-        
-
+       
                     </DockPanel>
 
                     <StackPanel Margin="0,0,0,3">
-
                         <DockPanel  Margin="0,0,0,3" >
-                            <TextBlock Text="{x:Static properties:Resources.SourceValue}" Margin="0,0,5,0" />
+                            <TextBlock Text="{x:Static properties:Resources.SourceValue}" Margin="0,0,3,0"  Width="60"/>
                             <TextBlock DockPanel.Dock="Right"  Visibility="{Binding DisplayConfig.IsSourceV,Converter={StaticResource bool2VisibilityConverter}}" Text="V"/>
                             <TextBlock DockPanel.Dock="Right"  Visibility="{Binding DisplayConfig.IsSourceV,Converter={StaticResource bool2VisibilityConverter1}}" Text="mA"/>
                             <TextBox Text="{Binding DisplayConfig.MeasureVal}" BorderThickness="0,0,0,1" />
                         </DockPanel>
                         <DockPanel  Margin="0,0,0,3" >
-                            <TextBlock Text="{x:Static properties:Resources.LimitValue}" Margin="0,0,5,0" />
+                            <TextBlock Text="{x:Static properties:Resources.LimitValue}" Margin="0,0,3,0"   Width="60"/>
                             <TextBlock DockPanel.Dock="Right"  Visibility="{Binding DisplayConfig.IsSourceV,Converter={StaticResource bool2VisibilityConverter1}}" Text="V"/>
                             <TextBlock DockPanel.Dock="Right"  Visibility="{Binding DisplayConfig.IsSourceV,Converter={StaticResource bool2VisibilityConverter}}" Text="mA"/>
                             <TextBox Text="{Binding DisplayConfig.LmtVal}" BorderThickness="0,0,0,1"/>
@@ -117,7 +114,7 @@
                                 <TextBox Text="{Binding  DisplayConfig.StopMeasureVal}" BorderThickness="0,0,0,1"/>
                             </DockPanel>
                         </UniformGrid>
-                        <UniformGrid Columns="2" >
+                        <UniformGrid Columns="2"  Margin="0,0,0,5">
                             <DockPanel>
                                 <TextBlock Text="{x:Static properties:Resources.PointCount}"/>
                                 <TextBlock DockPanel.Dock="Right" Width="30"   Text=""/>
@@ -130,14 +127,14 @@
                                 <TextBox Text="{Binding DisplayConfig.LimitVal}" BorderThickness="0,0,0,1"/>
                             </DockPanel>
                         </UniformGrid>
-                        <Button Content="{x:Static properties:Resources.Scan}" Click="VIScan_Click" Margin="2" />
 
-                        <DockPanel>
-                            <Grid Width="20" Margin="5,0" HorizontalAlignment="Left" DockPanel.Dock="Right">
+                        <DockPanel >
+                            <Button DockPanel.Dock="Right" Content="{x:Static properties:Resources.Scan}" Click="VIScan_Click" Margin="5,0,0,0" />
+                            <Grid Width="20" Margin="5,0,0,0" HorizontalAlignment="Left" DockPanel.Dock="Right">
                                 <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="15"  Foreground="{DynamicResource GlobalTextBrush}"/>
                                 <Button  Width="20" BorderBrush="Transparent" Background="Transparent" BorderThickness="0" Tag="SMUParam" Click="MenuItem_Template"/>
                             </Grid>
-                            <TextBlock Text="{x:Static properties:Resources.Template}" VerticalAlignment="Center" Width="53"/>
+                            <TextBlock Text="{x:Static properties:Resources.Template}" VerticalAlignment="Center" MinWidth="53" Margin="0,0,5,0"/>
                             <ComboBox  x:Name="ComboxVITemplate"  Style="{StaticResource ComboBox.Small}" SelectedValuePath="Value"  DisplayMemberPath="Key"  Margin="0,0,0,0"/>
                         </DockPanel>
                     </StackPanel>
