--- a/UI/ColorVision.Solution/Rbac/LoginWindow.xaml
+++ b/UI/ColorVision.Solution/Rbac/LoginWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ColorVision.Rbac"
         xmlns:hc="https://handyorg.github.io/handycontrol"
-        xmlns:resx="clr-namespace:ColorVision.Solution.Properties"
+        xmlns:properties="clr-namespace:ColorVision.Solution.Properties"
         mc:Ignorable="d"
-        Title="ColorVision 登录" Height="650"  Width="450" 
+        Title="{x:Static properties:Resources.Sign_in}" Height="650"  Width="450" 
         Background="{DynamicResource GlobalBackground}" 
         Initialized="Window_Initialized"
         WindowStartupLocation="CenterScreen"
@@ -81,7 +81,7 @@
                                    Foreground="White"
                                    HorizontalAlignment="Center"
                                    Margin="0,10,0,10"/>
-                        <TextBlock Text="{x:Static resx:Resources.AccountLogin}" 
+                        <TextBlock Text="{x:Static properties:Resources.AccountLogin}" 
                                    FontSize="24" 
                                    FontWeight="Bold"
                                    Foreground="White"
@@ -99,7 +99,7 @@
                     <!-- 用户名输入 -->
                     <DockPanel Margin="0,0,0,20">
                         <StackPanel>
-                            <TextBlock Text="用户名" 
+                            <TextBlock Text="{x:Static properties:Resources.Username}" 
                                        FontSize="13" 
                                        Foreground="#666666"
                                        Margin="0,0,0,8"/>
@@ -108,10 +108,10 @@
                                     CornerRadius="6"
                                     Background="White">
                                 <hc:TextBox x:Name="Account1"   
-                                            ToolTip="{x:Static resx:Resources.Account}"  
+                                            ToolTip="{x:Static properties:Resources.Account}"  
                                             VerticalAlignment="Center" 
                                             Text="{Binding Name}" 
-                                            hc:InfoElement.Placeholder="{x:Static resx:Resources.FillAccount}"  
+                                            hc:InfoElement.Placeholder="{x:Static properties:Resources.FillAccount}"  
                                             BorderThickness="0"
                                             Padding="12,10"
                                             FontSize="14"/>
@@ -122,7 +122,7 @@
                     <!-- 密码输入 -->
                     <DockPanel Margin="0,0,0,15">
                         <StackPanel>
-                            <TextBlock Text="密码" 
+                            <TextBlock Text="{x:Static properties:Resources.Password}" 
                                        FontSize="13" 
                                        Foreground="#666666"
                                        Margin="0,0,0,8"/>
@@ -131,9 +131,9 @@
                                     CornerRadius="6"
                                     Background="White">
                                 <hc:PasswordBox x:Name="PasswordBox1"  
-                                                ToolTip="{x:Static resx:Resources.Password}"  
+                                                ToolTip="{x:Static properties:Resources.Password}"  
                                                 VerticalAlignment="Center"  
-                                                hc:InfoElement.Placeholder="{x:Static resx:Resources.FillPassword}"  
+                                                hc:InfoElement.Placeholder="{x:Static properties:Resources.FillPassword}"  
                                                 BorderThickness="0"
                                                 Padding="12,10"
                                                 FontSize="14"
@@ -144,7 +144,7 @@
                     
                     <!-- 记住我 -->
                     <CheckBox x:Name="ChkRememberMe"
-                              Content="记住登录状态（7天内自动登录）"
+                              Content="{x:Static properties:Resources.RememberLoginStatus7Days}"
                               Foreground="#666666"
                               FontSize="12"
                               Margin="0,0,0,25"
@@ -152,7 +152,7 @@
                     
                     <!-- 登录按钮 -->
                     <Button x:Name="BtnLogin"
-                            Content="{x:Static resx:Resources.Sign_in}" 
+                            Content="{x:Static properties:Resources.Sign_in}" 
                             Height="44"
                             Click="Button_Click"
                             Style="{StaticResource ModernButton}"/>
@@ -169,12 +169,12 @@
                         <TextBlock HorizontalAlignment="Center" 
                                    Foreground="#666666"
                                    FontSize="12">
-                            <Run Text="还没有账户？"/>
+                            <Run Text="{x:Static properties:Resources.NoAccountYet}"/>
                             <Hyperlink Click="RegisterHyperlink_Click" 
                                        ToolTip="注册新账户"
                                        Foreground="#0078D4"
                                        TextDecorations="None">
-                                <Run Text="{x:Static resx:Resources.Create_an_account}" />
+                                <Run Text="{x:Static properties:Resources.Create_an_account}" />
                             </Hyperlink>
                         </TextBlock>
                         <TextBlock x:Name="TxtVersion"
