--- a/ColorVision/MainWindow.xaml
+++ b/ColorVision/MainWindow.xaml
@@ -108,15 +108,14 @@
                 <Grid x:Name="SolutionGrid" Background="{StaticResource TransparentGridBrush}" Visibility="{Binding ElementName=SolutionTab1,Path=IsSelected,Converter={StaticResource bool2VisibilityConverter}}"/>
             </Grid>
         </Grid>
-        <Border Grid.Row="2" Height="30" x:Name="StatusBarGrid" Background="{DynamicResource GlobalBackground}" BorderThickness="0,1,0,0" BorderBrush="{DynamicResource BorderBrush}" Visibility="{Binding IsOpenStatusBar,Converter={StaticResource bool2VisibilityConverter}}">
+        <Border Grid.Row="2" Height="30"  Background="{DynamicResource GlobalBackground}" BorderThickness="0,1,0,0" BorderBrush="{DynamicResource BorderBrush}" Visibility="{Binding IsOpenStatusBar,Converter={StaticResource bool2VisibilityConverter}}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <Grid Grid.Row="0">
-                </Grid>
+                <Grid Grid.Row="0" x:Name="StatusBarGrid" />
                 <StackPanel x:Name="StatusBarTextDocker" Grid.Column="2" Orientation="Horizontal"/>
             </Grid>
         </Border>
