--- a/UI/ColorVision.Solution/Rbac/PermissionManagerWindow.xaml
+++ b/UI/ColorVision.Solution/Rbac/PermissionManagerWindow.xaml
@@ -116,7 +116,7 @@
                     </Grid.RowDefinitions>
                     
                     <TextBlock Grid.Row="0" 
-                               Text=""{x:Static properties:Resources.RoleList}" 
+                               Text="{x:Static properties:Resources.RoleList}" 
                                FontSize="15" 
                                FontWeight="SemiBold"
                                Margin="0,0,0,10"/>
